# c-_for_begginers

./: README.md  pull_text.txt  test.txt
38_video/: Person.cpp  Person.h  a.out  main.cpp
controlling_program_flow/for_loop/: main  main.cpp
controlling_program_flow/functions/: main  main.cpp
controlling_program_flow/swithc/: a.out  main.cpp
controlling_program_flow/while_loop/: main  main.cpp
functions/: a.out  func  func_overload.cpp  main.cpp  read_only_func.cpp
inheritance/: CMakeLists.txt  main.cpp
inheritance/derived_class/: CMakeLists.txt  main.cpp
inheritance/derived_class/src/: Account.cpp  Account.h  Account_util.cpp  Account_util.h  Base.cpp  Base.h  CMakeLists.txt  Checking_Account.cpp  Checking_Account.h  Derive_Base.cpp  Derive_Base.h  Savings_Account.cpp  Savings_Account.h  Trust_Account.cpp  Trust_Account.h
inheritance/hello-exe/: Account.h.in
inheritance/protected_derived_class/: a.out  main.cpp
inheritance/say-hello/: main.cpp
inheritance/src/: Account.h  CMakeLists.txt
oop/classes_objects/class_and_AcessModifiers/challenge/: Movie.cpp  Movie.h  Movies.cpp  Movies.h  a.out  main.cpp
oop/classes_objects/class_and_AcessModifiers/src/: main.cpp
oop/classes_objects/creating_classes/: main.cpp
oop/classes_objects/member_methods/lib/: Account.h
oop/movies/: Movie.cpp  Movie.h  Movies.cpp  Movies.h  main  main.cpp
overloading_operator/: MyString.cpp  MyString.h  main  main.cpp
overloading_operator/overload_assigment/: MyString.cpp  MyString.h  main  main.cpp
pointers_and_reference/: const_and_pointers.cpp  dinamyc_memory_aloc.cpp  hello_world  hello_world.cpp  l_And_R_Values  l_And_R_Values.cpp  pointers.cpp  pointers_to_function.cpp  reference.cpp  ret_pointer_from_function.cpp
polimorphism/: a.out  gmon.out  main.cpp
polimorphism/finalSpecifier/: main.cpp
polimorphism/interfaces/: a.out  main.cpp
polimorphism/overrideSpecifier/: a.out  main.cpp
polimorphism/virtualDestructors/: a.out  main.cpp
polimorphism/virtualFunctions/: a.out  main.cpp
(+12 files in other folders)
